[metadata]
name = dpypx
version = 0.7.3
author = Artemis
author_email = artemis@artemisdev.xyz
description = A wrapper for the Discord Python Pixels API.
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/artemis21/dpypx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiohttp
    pillow
